--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<meta property="og:image" content="images/social-preview.png" />
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -51,7 +52,7 @@
 			<div class="text text-center">
 				<span class="subheading">Hey! I am</span>
 						<h1>Guilherme Silva</h1>
-							<h2>I'm a 
+							<h2>I'm... 
 								  <span
 									 class="txt-rotate"
 									 data-period="2000"
