--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>Guilherme Silva</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<meta name="author" content="Guilherme de Oliveira Silva" />
+	<meta property="og:image" content="images/social-preview.png" />
+	<meta property="og:title" content="Guilherme Silva" />
+	<meta property="og:description" content="Hey! I am Guilherme Silva. Economics undergrad, programmer, data enthusiast.">
 	
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -21,7 +26,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
-	<meta property="og:image" content="images/social-preview.png" />
+
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
