--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Guilherme de Oliveira Silva" />
 	<meta property="og:image" content="images/social-preview.png" />
 	<meta property="og:title" content="Guilherme Silva" />
-	<meta property="og:description" content="Hey! I am Guilherme Silva. Economics undergrad, programmer, data enthusiast.">
+	<meta property="og:description" content="Hey! I am Guilherme Silva. Economics undergrad, programmer, data enthusiast." />
 	
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
