Twitter card integration.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+	<meta name="twitter:card" content="summary" />
 	<meta name="author" content="Guilherme de Oliveira Silva" />
 	<meta property="og:image" content="images/social-preview.png" />
 	<meta property="og:title" content="Guilherme Silva" />
