--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
-		  <a class="navbar-brand" href="index.html"><span>G</span>uilherme</a>
+		  <a class="navbar-brand" href="index.html"><span>G.</span>Silva</a>
 		  <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		  </button>
@@ -67,12 +67,7 @@
 							</div>
 			</div>
 		  </div>
-		</div>
-	  <div class="mouse">
-				<a href="#" class="mouse-icon">
-					<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
-				</a>
-			</div>
+		</div>	
 	</section>
 
 	<section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
@@ -122,7 +117,7 @@
 								<span class="position">Federal University of Minas Gerais <em>UFMG</em></span>
 								<p>Economics undergraduate, emphasizing in Quantitative Methods: econometrics, linear algebra.</p>
 								<p>Expected to graduate by June/2022.</p>
-								<p>Current average grade: 88.5/100</p>
+								<p>Current average grade: 88.5/100 (as of end of Sophomore Year)</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -131,7 +126,7 @@
 								<h2>Computer Networks Technical degree</h2>
 								<span class="position">Federal Center for Technological Education of Minas Gerais <em>CEFET-MG</em></span>
 								<p>Techcnical level integrated with highschool education. I have developed programming, network management and computer maintenance skills.</p>
-								<p>Average grade: 86/100</p>
+								<p>Global average grade: 86/100</p>
 							</div>
 						</div>
 					  </div>
