--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 			<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 					<li class="ftco-animate"><a href="https://www.linkedin.com/in/guilhermeolivsilva/"><span class="icon-linkedin"></span></a></li>
 					<li class="ftco-animate"><a href="https://www.instagram.com/grandeguigs/"><span class="icon-instagram"></span></a></li>
+					<li class="ftco-animate"><a href="https://www.twitter.com/GuilhermeOSilv/"><span class="icon-twitter"></span></a></li>
 			</ul>
 		</div>
 			
