--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 			<div class="text text-center">
 				<span class="subheading">Hey! I am</span>
 						<h1>Guilherme Silva</h1>
-							<h2>I'm a 
+							<h2>I'm
 								  <span
 									 class="txt-rotate"
 									 data-period="2000"
-									 data-rotate='[ "Economics undergrad.", "Computer networks technician.", "Data enthusiast.", "Programmer."]'></span>
+									 data-rotate='[ "an Economics undergrad.", "a Computer networks technician.", "a Data enthusiast.", "a Programmer."]'></span>
 								</h2>
 							</div>
 			</div>
