Added a new completed course

--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text pl-3">
+								<h2>Financial Forecasting in Python</h2>
+								<span class="position">Datacamp</span>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
 								<h2>Excel from basics to advanced</h2>
 								<span class="position">Udemy</span>
 								<p><em>Do Básico ao Avançado - O Curso Completo de Microsoft Excel</em></p>
