Minor fixes. Added favicon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
 
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -155,6 +158,9 @@
 								<h2>Research Assistant</h2>
 								<span class="position">Federal Center for Technological Education of Minas Gerais <em>CEFET-MG</em></span>
 								<p>Research assistant to a Web of Things (IoT) project.</p>
+								<div class="text">
+									<p><a href="https://conferencias.cefetmg.br/index.php/26META/26META/paper/downloadSuppFile/1987/58" class="btn btn-primary py-3 px-3">Paper</a></p>
+								</div>
 							</div>
 						</div>
 					  </div>
