--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
 						<h2 class="heading">Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text pl-3">
+								<span class="date">2020-</span>
+								<h2>Data Science Intern</h2>
+								<span class="position">Big Data</span>
+								<p>I currently am a Data Science Intern at Big Data, a fast growing Brazilian startup that serves data-driven solutions to major companies worldwide. As an intern, I work with web crawlers for data acquisition, big data software infrastructure and predictive statistical models for business insights.</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
 								<span class="date">2019</span>
 								<h2>Volunteer Maths teacher</h2>
 								<span class="position">FACE Educa</span>
