--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text pl-3">
 								<span class="date">2020-</span>
-								<h2>Data Science Intern</h2>
+								<h2>Data Science intern</h2>
 								<span class="position">Big Data</span>
-								<p>I currently am a Data Science Intern at Big Data, a fast growing Brazilian startup that serves data-driven solutions to major companies worldwide. As an intern, I work with web crawlers for data acquisition, big data software infrastructure and predictive statistical models for business insights.</p>
+								<p>I currently am a Data Science intern at Big Data, a fast growing Brazilian startup that serves data-driven solutions to major companies worldwide. As an intern, I work with web crawlers for data acquisition, big data software infrastructure and predictive statistical models for business insights.</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
