--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 								<span class="date">2018-</span>
 								<h2>Economics undergrad student</h2>
 								<span class="position">Federal University of Minas Gerais <em>UFMG</em></span>
-								<p>Economics undergraduate, emphasizing in Quantitative Methods: econometrics, linear algebra.</p>
+								<p>Economics undergraduate, emphasizing in Data Science: econometrics, linear algebra, machine learning.</p>
 								<p>Expected to graduate by June/2022.</p>
-								<p>Current average grade: 88.5/100 (as of end of Sophomore Year)</p>
+								<p>Current average grade: 89/100 (as of end of fifth semester)</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
