feat: updated education and experience sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Guilherme de Oliveira Silva" />
 	<meta property="og:image" content="images/social-preview.png" />
 	<meta property="og:title" content="Guilherme Silva" />
-	<meta property="og:description" content="Hey! I am Guilherme Silva. Economics undergrad, programmer, data enthusiast." />
+	<meta property="og:description" content="Hey! I am Guilherme Silva. CompSci MSc student. Compilers researcher." />
 	
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -61,11 +61,11 @@
 			<div class="text text-center">
 				<span class="subheading">Hey! I am</span>
 						<h1>Guilherme Silva</h1>
-							<h2>I'm
+							<h2>I'm a...
 								  <span
 									 class="txt-rotate"
 									 data-period="2000"
-									 data-rotate='[ "an Economics undergrad.", "a Computer networks technician.", "a Data enthusiast.", "a Programmer."]'></span>
+									 data-rotate='[ "CompSci MSc student.", "Compilers researcher."]'></span>
 								</h2>
 							</div>
 			</div>
@@ -86,7 +86,7 @@
 						<li class="d-flex"><span>Name:</span> <span>Guilherme de Oliveira Silva</span></li>
 						<li class="d-flex"><span>Date of birth:</span> <span>March 4, 1997</span></li>
 						<li class="d-flex"><span>Address:</span> <span>Belo Horizonte, MG - Brazil</span></li>
-						<li class="d-flex"><span>Email:</span> <span>guilherme.olivsilva01@gmail.com</span></li>
+						<li class="d-flex"><span>Email:</span> <span>guilherme.olivsilva01[at]mail.com</span></li>
 					</ul>
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
@@ -115,12 +115,22 @@
 						<h2 class="heading">Education</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text pl-3">
-								<span class="date">2018-</span>
-								<h2>Economics undergrad student</h2>
+								<span class="date">2023-</span>
+								<h2>Computer Science Graduate student</h2>
 								<span class="position">Federal University of Minas Gerais <em>UFMG</em></span>
-								<p>Economics undergraduate, emphasizing in Data Science: econometrics, linear algebra, machine learning.</p>
-								<p>Expected to graduate by June/2022.</p>
-								<p>Current average grade: 89/100 (as of end of fifth semester)</p>
+								<p>Currently pursuing my Master's degree in Computer Science, researching compilers at the
+									<a href="https://www.linkedin.com/company/compilers-lab/mycompany/">Compilers Lab</a> under
+									<a href="https://homepages.dcc.ufmg.br/~fernando/">prof. Fernando M. Q. Pereira</a>.</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
+								<span class="date">2018-2022</span>
+								<h2>Economics major, Data Science minor</h2>
+								<span class="position">Federal University of Minas Gerais <em>UFMG</em></span>
+								<p>Economics Bachelor of Science course, emphasizing in Data Science: econometrics, linear algebra, machine learning.</p>
+								<p>Graduated by July/2022.</p>
+								<p>Global average grade: 90/100.</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -138,10 +148,34 @@
 						<h2 class="heading">Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text pl-3">
-								<span class="date">2020-</span>
+								<span class="date">May 2023 -</span>
+								<h2>Graduate Researcher</h2>
+								<span class="position">Compilers Lab</span>
+								<p>I currently am a graduate researcher at the Compilers Lab under prof. Fernando Pereira as part of the Computer Science Master's program I am currently enrolled at.</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
+								<span class="date">Nov. 2022 - May 2023</span>
+								<h2>Software Engineer</h2>
+								<span class="position">Big Data</span>
+								<p>After two years working as a Data Scientist, I've specialized in Software Engineering and focused my work on scaling big data, machine learning solutions as a product.</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
+								<span class="date">Sep. 2021 - Nov. 2022</span>
+								<h2>Data Scientist</h2>
+								<span class="position">Big Data</span>
+								<p>As a full Data Scientist, my work was heavily focused on implementing and maintaning models for custom pricing linked to a recommendation system.</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
+								<span class="date">Jul. 2020 - Sep. 2021</span>
 								<h2>Data Science intern</h2>
 								<span class="position">Big Data</span>
-								<p>I currently am a Data Science intern at Big Data, a fast growing Brazilian startup that serves data-driven solutions to major companies worldwide. As an intern, I work with web crawlers for data acquisition, big data software infrastructure and predictive statistical models for business insights.</p>
+								<p>As an intern, I've worked with web crawlers for data acquisition, big data software infrastructure and predictive statistical models for business insights.</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -176,6 +210,13 @@
 					  <div id="page-3" class= "page two">
 						<h2 class="heading">Additional courses</h2>
 
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="text pl-3">
+								<h2>Modern Software Engineering</h2>
+								<span class="position">DCC/UFMG</span>
+								<p><em>Engenharia de Software Moderna</em></p>
+							</div>
+						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="text pl-3">
 								<h2>Data for Effective Policy Making</h2>
