feat: updated profile picture and socials

--- a/index.html
+++ b/index.html
@@ -299,7 +299,6 @@
 			<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 					<li class="ftco-animate"><a href="https://www.linkedin.com/in/guilhermeolivsilva/"><span class="icon-linkedin"></span></a></li>
 					<li class="ftco-animate"><a href="https://www.instagram.com/grandeguigs/"><span class="icon-instagram"></span></a></li>
-					<li class="ftco-animate"><a href="https://www.twitter.com/GuilhermeOSilv/"><span class="icon-twitter"></span></a></li>
 			</ul>
 		</div>
 			
@@ -326,7 +325,7 @@
 		  </div>
 
 		  <div class="col-md-6 d-flex">
-			<div class="img" style="background-image: url(images/about.jpg);"></div>
+			<div class="img" style="background-image: url(images/about.jpeg);"></div>
 		  </div>
 		</div>
 	  </div>
