chore: removed Instagram link

--- a/index.html
+++ b/index.html
@@ -291,14 +291,13 @@
 		<div class="row justify-content-center mb-3 pb-3">
 		  <div class="col-md-7 heading-section text-center ftco-animate">
 			<h1 class="big big-2">Contact</h1>
-			<h2 class="mb-4">Contact Me</h2>
+			<h2 class="mb-4">Contact</h2>
 			<p>Have an interesting idea and want to discuss? Get in touch!</p>
 		  </div>
 		</div>
 		<div class="row justify-content-center mb-5 pb-3">
 			<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 					<li class="ftco-animate"><a href="https://www.linkedin.com/in/guilhermeolivsilva/"><span class="icon-linkedin"></span></a></li>
-					<li class="ftco-animate"><a href="https://www.instagram.com/grandeguigs/"><span class="icon-instagram"></span></a></li>
 			</ul>
 		</div>
 			
